--- a/package.json
+++ b/package.json
@@ -361,39 +361,45 @@
         "displayName": "Inventory: Can view instances",
         "subPermissions": [
           "module.inventory.enabled",
+          "users.collection.get",
+          "source-storage.records.get",
+          "circulation.loans.collection.get",
+          "circulation.loans.collection.get",
+          "circulation.requests.collection.get",
+          "configuration.entries.collection.get",
+          "inventory.config.instances.blocked-fields.get",
           "inventory.instances.collection.get",
           "inventory.instances.item.get",
           "inventory.items.collection.get",
-          "inventory.config.instances.blocked-fields.get",
+          "inventory.items.item.get",
           "inventory-storage.identifier-types.collection.get",
           "inventory-storage.contributor-types.collection.get",
           "inventory-storage.contributor-name-types.collection.get",
-          "inventory-storage.instance-formats.collection.get",
           "inventory-storage.call-number-types.collection.get",
-          "inventory-storage.holdings-note-types.collection.get",
           "inventory-storage.item-note-types.collection.get",
           "inventory-storage.item-damaged-statuses.collection.get",
           "inventory-storage.nature-of-content-terms.collection.get",
-          "inventory-storage.instance-types.collection.get",
           "inventory-storage.classification-types.collection.get",
           "inventory-storage.alternative-title-types.collection.get",
           "inventory-storage.locations.collection.get",
-          "inventory-storage.instance-relationship-types.collection.get",
-          "inventory-storage.instance-statuses.collection.get",
+          "inventory-storage.locations.item.get",
           "inventory-storage.modes-of-issuance.collection.get",
+          "inventory-storage.instance-formats.collection.get",
+          "inventory-storage.instance-statuses.collection.get",
+          "inventory-storage.instance-types.collection.get",
+          "inventory-storage.instance-relationship-types.collection.get",
           "inventory-storage.instance-note-types.collection.get",
+          "inventory-storage.instances.item.get",
           "inventory-storage.electronic-access-relationships.collection.get",
           "inventory-storage.statistical-code-types.collection.get",
           "inventory-storage.statistical-codes.collection.get",
           "inventory-storage.ill-policies.collection.get",
+          "inventory-storage.holdings-note-types.collection.get",
           "inventory-storage.holdings-types.collection.get",
-          "inventory-storage.instances.item.get",
           "inventory-storage.holdings.collection.get",
+          "inventory-storage.holdings.item.get",
           "inventory-storage.material-types.collection.get",
-          "inventory-storage.loan-types.collection.get",
-          "configuration.entries.collection.get",
-          "users.collection.get",
-          "source-storage.records.get"
+          "inventory-storage.loan-types.collection.get"
         ],
         "visible": true
       },
@@ -409,7 +415,7 @@
       },
       {
         "permissionName": "ui-inventory.instance.edit",
-        "displayName": "Inventory: Can view create and edit instances",
+        "displayName": "Inventory: Can view, create and edit instances",
         "subPermissions": [
           "ui-inventory.instance.create",
           "inventory.instances.item.put",
