--- a/package.json
+++ b/package.json
@@ -436,7 +436,19 @@
         "permissionName": "ui-inventory.item.edit",
         "displayName": "Inventory: Can view, create and edit item",
         "subPermissions": [
-          "ui-inventory.instance.create"
+          "ui-inventory.item.create",
+          "inventory.items.item.put",
+          "inventory-storage.items.item.get",
+          "inventory-storage.items.collection.get"
+        ],
+        "visible": true
+      },
+      {
+        "permissionName": "ui-inventory.item.delete",
+        "displayName": "Inventory: Can view, create, edit and delete item",
+        "subPermissions": [
+          "ui-inventory.item.edit",
+          "inventory.items.item.delete"
         ],
         "visible": true
       }
