--- a/package.json
+++ b/package.json
@@ -369,8 +369,17 @@
         "permissionName": "ui-inventory.holdings.edit",
         "displayName": "Inventory: Can view, create and edit holdings",
         "subPermissions": [
-          "ui-inventory.instance.view",
+          "ui-inventory.holdings.create",
           "inventory-storage.holdings.item.put"
+        ],
+        "visible": true
+      },
+      {
+        "permissionName": "ui-inventory.holdings.delete",
+        "displayName": "Inventory: Can view, create, edit and delete holdings",
+        "subPermissions": [
+          "ui-inventory.holdings.edit",
+          "inventory-storage.holdings.item.delete"
         ],
         "visible": true
       }
