Init work on control panel

--- a/package.json
+++ b/package.json
@@ -534,6 +534,7 @@
     "react-final-form-listeners": "^1.0.2",
     "react-hot-loader": "^4.3.12",
     "react-intl": "^2.3.0",
+    "react-router-prop-types": "^1.0.4",
     "redux-form": "^7.0.3"
   },
   "peerDependencies": {
