--- a/package.json
+++ b/package.json
@@ -594,6 +594,7 @@
   },
   "dependencies": {
     "@folio/react-intl-safe-html": "^1.0.2",
+    "@folio/stripes-util": "^1.6.0",
     "final-form": "^4.18.2",
     "final-form-arrays": "^3.0.1",
     "lodash": "^4.17.4",
