--- a/package.json
+++ b/package.json
@@ -409,7 +409,9 @@
           "inventory-storage.holdings.collection.get",
           "inventory-storage.holdings.item.get",
           "inventory-storage.material-types.collection.get",
-          "inventory-storage.loan-types.collection.get"
+          "inventory-storage.loan-types.collection.get",
+          "inventory-storage.service-points.get",
+          "inventory-storage.service-points.collection.get"
         ],
         "visible": true
       },
