--- a/package.json
+++ b/package.json
@@ -365,6 +365,17 @@
         "visible": true
       },
       {
+        "permissionName": "ui-inventory.settings.hrid-handling",
+        "displayName": "Settings (Inventory): Create, edit and remove HRID handling",
+        "subPermissions": [
+          "inventory-storage.hrid-settings.item.get",
+          "inventory-storage.hrid-settings.item.put",
+          "settings.inventory.enabled",
+          "ui-inventory.settings.list.view"
+        ],
+        "visible": true
+      },
+      {
         "permissionName": "ui-inventory.instance.view",
         "displayName": "Inventory: View instances, holdings, and items",
         "subPermissions": [
@@ -411,7 +422,8 @@
           "inventory-storage.material-types.collection.get",
           "inventory-storage.loan-types.collection.get",
           "inventory-storage.service-points.get",
-          "inventory-storage.service-points.collection.get"
+          "inventory-storage.service-points.collection.get",
+          "inventory-storage.hrid-settings.item.get"
         ],
         "visible": true
       },
@@ -554,7 +566,8 @@
           "inventory-storage.holdings-note-types.collection.get",
           "inventory-storage.holdings-note-types.item.get",
           "inventory-storage.item-note-types.collection.get",
-          "inventory-storage.item-note-types.item.get"
+          "inventory-storage.item-note-types.item.get",
+          "inventory-storage.hrid-settings.item.get"
         ],
         "visible": true
       },
