--- a/package.json
+++ b/package.json
@@ -629,7 +629,8 @@
     "react-hot-loader": "^4.3.12",
     "react-intl": "^2.3.0",
     "react-router-prop-types": "^1.0.4",
-    "redux-form": "^7.0.3"
+    "redux-form": "^7.0.3",
+    "moment": "^2.22.2"
   },
   "peerDependencies": {
     "@folio/stripes": "^2.13.0",
