--- a/package.json
+++ b/package.json
@@ -607,11 +607,12 @@
     "@folio/stripes-smart-components": "^2.12.0",
     "@folio/stripes-components": "^5.9.0",
     "babel-eslint": "^9.0.0",
-    "babel-polyfill": "^6.26.0",
     "chai": "^4.2.0",
+    "core-js": "^3.6.4", 
     "eslint": "^5.5.0",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
+    "regenerator-runtime": "^0.13.3", 
     "sinon": "^7.0.0"
   },
   "dependencies": {
