--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@folio/inventory",
-  "version": "1.13.1",
+  "version": "2.0.0",
   "description": "Inventory manager",
   "repository": "folio-org/ui-inventory",
   "publishConfig": {
@@ -591,17 +591,18 @@
     "@bigtest/mocha": "^0.5.1",
     "@bigtest/react": "^0.1.2",
     "@folio/eslint-config-stripes": "^3.2.1",
-    "@folio/stripes": "^2.13.0",
+    "@folio/stripes": "^3.0.0",
     "@folio/stripes-cli": "^1.13.0",
-    "@folio/stripes-core": "^3.0.1",
-    "@folio/stripes-smart-components": "^2.12.0",
-    "@folio/stripes-components": "^5.9.0",
+    "@folio/stripes-core": "^4.0.0",
+    "@folio/stripes-smart-components": "^3.0.0",
+    "@folio/stripes-components": "^6.0.0",
     "babel-eslint": "^9.0.0",
     "chai": "^4.2.0",
     "core-js": "^3.6.4",
     "eslint": "^5.5.0",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
+    "react-router-dom": "^5.0.1",
     "regenerator-runtime": "^0.13.3",
     "sinon": "^7.0.0"
   },
@@ -618,14 +619,14 @@
     "react-final-form-arrays": "^3.1.0",
     "react-final-form-listeners": "^1.0.2",
     "react-hot-loader": "^4.3.12",
-    "react-intl": "^2.3.0",
     "react-router-prop-types": "^1.0.4",
     "redux-form": "^7.0.3",
     "moment": "^2.22.2"
   },
   "peerDependencies": {
-    "@folio/stripes": "^2.13.0",
+    "@folio/stripes": "^3.0.0",
     "react": "*",
+    "react-intl": "^2.3.0",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1"
   }
