--- a/package.json
+++ b/package.json
@@ -423,7 +423,8 @@
           "inventory-storage.loan-types.collection.get",
           "inventory-storage.service-points.get",
           "inventory-storage.service-points.collection.get",
-          "inventory-storage.hrid-settings.item.get"
+          "inventory-storage.hrid-settings.item.get",
+          "inventory-storage.instance-bulk.ids.get"
         ],
         "visible": true
       },
