--- a/package.json
+++ b/package.json
@@ -439,7 +439,7 @@
         "visible": true
       },
       {
-        "permissionName": "records-editor.records.item.put",
+        "permissionName": "ui-inventory.instance.edit",
         "displayName": "Inventory: View, create, edit instances",
         "subPermissions": [
           "ui-inventory.instance.create",
