--- a/package.json
+++ b/package.json
@@ -603,7 +603,7 @@
     "eslint": "^5.5.0",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
-    "react-router-dom": "^5.0.1",
+    "react-router-dom": "^4.3.1",
     "regenerator-runtime": "^0.13.3",
     "sinon": "^7.0.0"
   },
@@ -627,8 +627,8 @@
     "@folio/stripes": "^3.1.0",
     "react": "*",
     "react-intl": "^2.3.0",
-    "react-router": "^5.0.1",
-    "react-router-dom": "^5.0.1"
+    "react-router": "4.3.1",
+    "react-router-dom": "^4.3.1"
   },
   "optionalDependencies": {
     "@folio/plugin-find-instance": "^2.0.0",
