--- a/package.json
+++ b/package.json
@@ -404,6 +404,12 @@
           "inventory-storage.alternative-title-types.collection.get",
           "inventory-storage.locations.collection.get",
           "inventory-storage.locations.item.get",
+          "inventory-storage.location-units.institutions.collection.get",
+          "inventory-storage.location-units.institutions.item.get",
+          "inventory-storage.location-units.campuses.collection.get",
+          "inventory-storage.location-units.campuses.item.get",
+          "inventory-storage.location-units.libraries.collection.get",
+          "inventory-storage.location-units.libraries.item.get",
           "inventory-storage.modes-of-issuance.collection.get",
           "inventory-storage.instance-formats.collection.get",
           "inventory-storage.instance-statuses.collection.get",
