--- a/package.json
+++ b/package.json
@@ -633,7 +633,7 @@
     "@folio/stripes": "^3.1.0",
     "react": "*",
     "react-intl": "^2.3.0",
-    "react-router": "5.0.1",
+    "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1"
   },
   "optionalDependencies": {
