pin moment to ~2.24

--- a/package.json
+++ b/package.json
@@ -627,7 +627,7 @@
     "react-hot-loader": "^4.3.12",
     "react-router-prop-types": "^1.0.4",
     "redux-form": "^7.0.3",
-    "moment": "^2.22.2"
+    "moment": "~2.24.0"
   },
   "peerDependencies": {
     "@folio/stripes": "^3.1.0",
