gotta resolve it, else deps pull in v2.25

--- a/package.json
+++ b/package.json
@@ -639,5 +639,8 @@
   "optionalDependencies": {
     "@folio/plugin-find-instance": "^2.0.0",
     "@folio/quick-marc": "^1.0.0"
+  }, 
+  "resolutions": {
+    "moment": "~2.24.0"
   }
 }
