pin moment to ~2.24 (#1018)
Pin `moment` at `~2.24.0` in light of multiple issues with `2.25.0`:
* [5489](https://github.com/moment/moment/issues/5489)
* [5472](https://github.com/moment/moment/issues/5472)

--- a/package.json
+++ b/package.json
@@ -627,7 +627,7 @@
     "react-hot-loader": "^4.3.12",
     "react-router-prop-types": "^1.0.4",
     "redux-form": "^7.0.3",
-    "moment": "^2.22.2"
+    "moment": "~2.24.0"
   },
   "peerDependencies": {
     "@folio/stripes": "^3.1.0",
@@ -639,5 +639,8 @@
   "optionalDependencies": {
     "@folio/plugin-find-instance": "^2.0.0",
     "@folio/quick-marc": "^1.0.0"
+  }, 
+  "resolutions": {
+    "moment": "~2.24.0"
   }
 }
