Preserve default sort order across segments

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     ],
     "displayName": "ui-inventory.meta.title",
     "route": "/inventory",
-    "home": "/inventory?filters=&sort=Title",
+    "home": "/inventory?filters=&sort=title",
     "queryResource": "query",
     "icons": [
       {
