UIIN-1158 Update according comment

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     ],
     "okapiInterfaces": {
       "inventory": "10.0",
+      "source-storage-records": "2.0",
       "instance-storage": "7.0",
       "holdings-storage": "3.0 4.0",
       "item-storage": "8.0",
