--- a/package.json
+++ b/package.json
@@ -610,7 +610,7 @@
     "@bigtest/react": "^0.1.2",
     "@folio/eslint-config-stripes": "^3.2.1",
     "@folio/stripes": "^4.0.0",
-    "@folio/stripes-cli": "^1.13.0",
+    "@folio/stripes-cli": "~1.17.0",
     "@folio/stripes-core": "^5.0.0",
     "@folio/stripes-smart-components": "^4.0.0",
     "@folio/stripes-components": "^7.0.0",
