--- a/package.json
+++ b/package.json
@@ -623,7 +623,8 @@
     "react-intl": "^4.5.3",
     "react-router-dom": "^5.0.1",
     "regenerator-runtime": "^0.13.3",
-    "sinon": "^7.0.0"
+    "sinon": "^7.0.0",
+    "faker": "^4.1.0"
   },
   "dependencies": {
     "@folio/react-intl-safe-html": "^2.0.0",
