--- a/package.json
+++ b/package.json
@@ -605,7 +605,6 @@
   },
   "devDependencies": {
     "@bigtest/interactor": "^0.7.0",
-    "@bigtest/mirage": "^0.0.1",
     "@bigtest/mocha": "^0.5.1",
     "@bigtest/react": "^0.1.2",
     "@folio/eslint-config-stripes": "^3.2.1",
@@ -618,13 +617,15 @@
     "chai": "^4.2.0",
     "core-js": "^3.6.4",
     "eslint": "^6.8.0",
+    "faker": "^4.1.0",
+    "inflected": "^2.0.4",
+    "miragejs": "^0.1.40",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
     "react-intl": "^4.5.3",
     "react-router-dom": "^5.0.1",
     "regenerator-runtime": "^0.13.3",
-    "sinon": "^7.0.0",
-    "faker": "^4.1.0"
+    "sinon": "^7.0.0"
   },
   "dependencies": {
     "@folio/react-intl-safe-html": "^2.0.0",
