--- a/package.json
+++ b/package.json
@@ -652,8 +652,10 @@
     "react-router-dom": "^5.0.1"
   },
   "optionalDependencies": {
+    "@folio/plugin-create-inventory-records": "^1.0.0",
     "@folio/plugin-find-instance": "^3.0.0",
     "@folio/quick-marc": "^1.0.0"
+    
   },
   "resolutions": {
     "moment": "~2.24.0"
