UIIN-1210: Fast add permission (Inventory)
For the first two scenarios in this story, all that was required was
to ad IfPermission checking to the fast add button.  The third scenario,
which requires that users with all inventory permissions be able to see
the fast add button, required modifying the invenotry All-permissions
to add the fast add permission.

refs: https://issues.folio.org/browse/UIIN-1210

--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
         "displayName": "Inventory: All permissions",
         "description": "Some subperms to support enabling/using the Inventory app",
         "subPermissions": [
+          "ui-plugin-create-inventory-records.create",
           "ui-inventory.instance.view",
           "ui-inventory.instance.create",
           "ui-inventory.holdings.create",
