--- a/package.json
+++ b/package.json
@@ -693,7 +693,8 @@
     "react-final-form-listeners": "^1.0.2",
     "react-hot-loader": "^4.3.12",
     "react-router-prop-types": "^1.0.4",
-    "redux-form": "^7.0.3"
+    "redux-form": "^7.0.3",
+    "file-saver": "^2.0.0"
   },
   "peerDependencies": {
     "@folio/stripes": "^5.0.0",
