--- a/package.json
+++ b/package.json
@@ -658,16 +658,19 @@
     "@bigtest/interactor": "^0.7.0",
     "@bigtest/mocha": "^0.5.1",
     "@bigtest/react": "^0.1.2",
-    "@folio/eslint-config-stripes": "^3.2.1",
+    "@folio/eslint-config-stripes": "^5.0.0",
     "@folio/stripes": "^5.0.0",
     "@folio/stripes-cli": "^1.13.0",
     "@folio/stripes-components": "^8.0.0",
     "@folio/stripes-core": "^6.0.0",
     "@folio/stripes-smart-components": "^5.0.0",
-    "babel-eslint": "^9.0.0",
+    "babel-eslint": "^10.1.0",
     "chai": "^4.2.0",
     "core-js": "^3.6.4",
-    "eslint": "^6.8.0",
+    "eslint": "^7.13.0",
+    "eslint-plugin-filenames": "^1.3.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.0.0",
     "faker": "^4.1.0",
     "inflected": "^2.0.4",
     "miragejs": "^0.1.40",
@@ -710,6 +713,7 @@
 
   },
   "resolutions": {
+    "babel-eslint/@babel/parser": "7.7.5",
     "moment": "~2.24.0"
   }
 }
