--- a/package.json
+++ b/package.json
@@ -653,19 +653,31 @@
   "scripts": {
     "start": "stripes serve",
     "lint": "eslint .",
-    "test": "stripes test karma"
+    "test": "yarn run test:unit && yarn run test:e2e",
+    "test:unit": "jest --ci --coverage",
+    "test:e2e": "stripes test karma --karma.singleRun --karma.browsers ChromeDocker --karma.reporters mocha junit --coverage"
   },
   "devDependencies": {
+    "@babel/core": "^7.8.0",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/plugin-proposal-decorators": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-react": "^7.7.4",
     "@bigtest/interactor": "^0.7.0",
     "@bigtest/mocha": "^0.5.1",
     "@bigtest/react": "^0.1.2",
     "@folio/eslint-config-stripes": "^5.0.0",
     "@folio/stripes": "^5.0.0",
+    "@folio/stripes-acq-components": "^2.2.0",
     "@folio/stripes-cli": "^1.13.0",
     "@folio/stripes-components": "^8.0.0",
     "@folio/stripes-core": "^6.0.0",
     "@folio/stripes-smart-components": "^5.0.0",
+    "@testing-library/jest-dom": "^5.11.1",
+    "@testing-library/react": "^11.0.2",
     "babel-eslint": "^10.1.0",
+    "babel-jest": "^26.3.0",
     "chai": "^4.2.0",
     "core-js": "^3.6.4",
     "eslint": "^7.13.0",
@@ -674,6 +686,9 @@
     "eslint-plugin-jest": "^24.0.0",
     "faker": "^4.1.0",
     "inflected": "^2.0.4",
+    "jest": "^26.4.2",
+    "jest-css-modules": "^2.1.0",
+    "jest-junit": "^12.0.0",
     "miragejs": "^0.1.40",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
