--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,11 @@
 {
   "parser": "babel-eslint",
-  "extends": "@folio/eslint-config-stripes"
+  "extends": "@folio/eslint-config-stripes",
+  "plugins": [
+    "filenames",
+    "jest"
+  ],
+  "env": {
+    "jest/globals": true
+  }
 }
