UIIN-309 Assign tags to Inventory Items

--- a/package.json
+++ b/package.json
@@ -75,7 +75,8 @@
       "users": "15.0",
       "location-units": "2.0",
       "circulation": "9.0",
-      "configuration": "2.0"
+      "configuration": "2.0",
+      "tags": "1.0"
     },
     "permissionSets": [
       {
