--- a/package.json
+++ b/package.json
@@ -76,7 +76,8 @@
       "location-units": "2.0",
       "circulation": "9.0",
       "configuration": "2.0",
-      "tags": "1.0"
+      "tags": "1.0",
+      "inventory-record-bulk": "8.0"
     },
     "permissionSets": [
       {
@@ -463,7 +464,7 @@
           "inventory-storage.service-points.item.get",
           "inventory-storage.service-points.collection.get",
           "inventory-storage.hrid-settings.item.get",
-          "inventory-storage.instance-bulk.ids.get"
+          "inventory-storage.record-bulk.ids.get"
         ],
         "visible": true
       },
