--- a/package.json
+++ b/package.json
@@ -347,6 +347,19 @@
         "visible": true
       },
       {
+        "permissionName": "ui-inventory.settings.single-record-import",
+        "displayName": "Settings (Inventory): Configure single-record import",
+        "subPermissions": [
+          "settings.inventory.enabled",
+          "copycat.target-profiles.collection.get",
+          "copycat.target-profiles.item.get",
+          "copycat.target-profiles.item.post",
+          "copycat.target-profiles.item.put",
+          "copycat.target-profiles.item.delete"
+        ],
+        "visible": true
+      },
+      {
         "permissionName": "ui-inventory.settings.holdings-note-types",
         "displayName": "Settings (Inventory): Create, edit, delete holdings note types",
         "subPermissions": [
@@ -647,6 +660,14 @@
         "displayName": "Inventory: Mark items withdrawn",
         "subPermissions": [
           "inventory.items.item.mark-withdrawn.post"
+        ],
+        "visible": true
+      },
+      {
+        "permissionName": "ui-inventory.single-record-import",
+        "displayName": "Inventory: Import single record",
+        "subPermissions": [
+          "copycat.imports.post"
         ],
         "visible": true
       }
