--- a/package.json
+++ b/package.json
@@ -678,7 +678,7 @@
   "scripts": {
     "start": "stripes serve",
     "lint": "eslint .",
-    "test": "yarn run test:e2e:ci",
+    "test": "yarn run test:unit && yarn run test:e2e:ci",
     "test:unit": "jest --ci --coverage",
     "test:e2e": "stripes test karma",
     "test:e2e:ci": "stripes test karma --karma.singleRun --karma.browsers ChromeDocker --karma.reporters mocha junit --coverage"
@@ -701,6 +701,7 @@
     "@folio/stripes-smart-components": "^5.0.0",
     "@testing-library/jest-dom": "^5.11.1",
     "@testing-library/react": "^11.0.2",
+    "@testing-library/user-event": "^12.1.10",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.3.0",
     "chai": "^4.2.0",
