UIIN-1390: Cover select instances functionality with jest/rtl tests

--- a/.eslintrc
+++ b/.eslintrc
@@ -5,6 +5,15 @@
     "filenames",
     "jest"
   ],
+  "overrides": [
+    {
+      "files": ["*test.js", "test/**"],
+      "rules": {
+        "react/prop-types": "off",
+        "import/prefer-default-export": "off"
+      }
+    }
+  ],
   "env": {
     "jest/globals": true
   }
