--- a/package.json
+++ b/package.json
@@ -78,7 +78,9 @@
       "configuration": "2.0",
       "tags": "1.0",
       "inventory-record-bulk": "1.0",
-      "data-export": "3.0"
+      "data-export": "3.0",
+      "copycat-imports": "1.0",
+      "copycat-profiles": "1.0"
     },
     "permissionSets": [
       {
@@ -352,11 +354,11 @@
         "displayName": "Settings (Inventory): Configure single-record import",
         "subPermissions": [
           "settings.inventory.enabled",
-          "copycat.target-profiles.collection.get",
-          "copycat.target-profiles.item.get",
-          "copycat.target-profiles.item.post",
-          "copycat.target-profiles.item.put",
-          "copycat.target-profiles.item.delete"
+          "copycat.profiles.collection.get",
+          "copycat.profiles.item.get",
+          "copycat.profiles.item.post",
+          "copycat.profiles.item.put",
+          "copycat.profiles.item.delete"
         ],
         "visible": true
       },
