--- a/package.json
+++ b/package.json
@@ -666,6 +666,14 @@
         "visible": true
       },
       {
+        "permissionName": "ui-inventory.items.mark-intellectual-item",
+        "displayName": "Inventory: Mark items intellectual item",
+        "subPermissions": [
+          "inventory.items.item.mark-intellectual-item.post"
+        ],
+        "visible": true
+      },
+      {
         "permissionName": "ui-inventory.single-record-import",
         "displayName": "Inventory: Import single record",
         "subPermissions": [
