--- a/package.json
+++ b/package.json
@@ -741,6 +741,7 @@
   },
   "dependencies": {
     "@folio/react-intl-safe-html": "^2.0.0",
+    "@testing-library/dom": "^7.29.4",
     "file-saver": "^2.0.0",
     "final-form": "^4.18.2",
     "final-form-arrays": "^3.0.1",
