--- a/package.json
+++ b/package.json
@@ -78,11 +78,11 @@
       "configuration": "2.0",
       "tags": "1.0",
       "inventory-record-bulk": "1.0",
-      "data-export": "3.0",
-      "copycat-imports": "1.0",
-      "copycat-profiles": "1.0"
+      "data-export": "3.0"
     },
     "optionalOkapiInterfaces": {
+      "copycat-imports": "1.0",
+      "copycat-profiles": "1.0",
       "remote-storage-configurations": "1.0",
       "remote-storage-mappings": "1.0"
     },
