UIIN-1399: Rename permission to `Settings (Inventory): View list of settings pages`

--- a/package.json
+++ b/package.json
@@ -603,7 +603,7 @@
       },
       {
         "permissionName": "ui-inventory.settings.list.view",
-        "displayName": "Settings (Inventory): Display list of settings pages",
+        "displayName": "Settings (Inventory): View list of settings pages",
         "subPermissions": [
           "settings.inventory.enabled",
           "users.collection.get",
