revert `yarn stripes` to `stripes`

--- a/package.json
+++ b/package.json
@@ -723,12 +723,12 @@
     ]
   },
   "scripts": {
-    "start": "yarn stripes serve",
+    "start": "stripes serve",
     "lint": "eslint .",
     "test": "yarn run test:unit && yarn run test:e2e:ci",
     "test:unit": "jest --ci --coverage",
-    "test:e2e": "yarn stripes test karma",
-    "test:e2e:ci": "yarn stripes test karma --karma.singleRun --karma.browsers ChromeDocker --karma.reporters mocha junit --coverage"
+    "test:e2e": "stripes test karma",
+    "test:e2e:ci": "stripes test karma --karma.singleRun --karma.browsers ChromeDocker --karma.reporters mocha junit --coverage"
   },
   "devDependencies": {
     "@babel/core": "^7.8.0",
