UIIN-1044: Improve relationship with parent instances

--- a/.eslintrc
+++ b/.eslintrc
@@ -12,6 +12,12 @@
         "react/prop-types": "off",
         "import/prefer-default-export": "off"
       }
+    },
+    {
+      "files": [ "src/**"],
+      "rules": {
+        "react-hooks/exhaustive-deps": "off"
+      }
     }
   ],
   "env": {
